[project]
name = "reminix-runtime-monorepo"
version = "0.0.0"
description = "Reminix Runtime - Monorepo"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-langchain = { workspace = true }
reminix-langgraph = { workspace = true }
reminix-openai = { workspace = true }
reminix-anthropic = { workspace = true }
reminix-llamaindex = { workspace = true }
