[project]
name = "reminix-runtime-monorepo"
version = "0.0.0"
description = "Reminix Runtime - Monorepo"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-langchain = { workspace = true }
reminix-langgraph = { workspace = true }
reminix-openai = { workspace = true }
reminix-anthropic = { workspace = true }
reminix-llamaindex = { workspace = true }
