[project]
name = "example-langchain-basic"
version = "0.0.0"
description = "Basic LangChain agent example"
requires-python = ">=3.10"
dependencies = [
    "reminix-runtime",
    "reminix-langchain",
    "langchain-openai>=1.1.0",
    "langchain-core>=1.2.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-langchain = { workspace = true }
