[project]
name = "example-langgraph-tools"
version = "0.0.0"
description = "LangGraph with tools example"
requires-python = ">=3.10"
dependencies = [
    "reminix-runtime",
    "reminix-langchain",
    "reminix-langgraph",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-langchain = { workspace = true }
reminix-langgraph = { workspace = true }
