[project]
name = "example-llamaindex-rag"
version = "0.0.0"
description = "LlamaIndex RAG agent example"
requires-python = ">=3.10"
dependencies = [
    "reminix-runtime",
    "reminix-llamaindex",
    "llama-index-llms-openai>=0.4.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-llamaindex = { workspace = true }
