[project]
name = "example-openai-basic"
version = "0.0.0"
description = "Basic OpenAI agent example"
requires-python = ">=3.10"
dependencies = [
    "reminix-runtime",
    "reminix-openai",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
reminix-runtime = { workspace = true }
reminix-openai = { workspace = true }
